Version 1.4207: 
- Fix bug introduced in user_specified_filehandle.t by last release

Version 1.4206: Sat May 2 2015
- Prevent CPAN from indexing private-lib
- Again try to silence subroutine redefined warnings in File::Slurp.
  http://www.cpantesters.org/cpan/report/9373ce6a-e71a-11e4-9f23-cdc1e0bfc7aa

Version 1.4205: Mon Apr 20 2015
- Improve support for parallel test execution
- Don't install private Module::Install extension. Thanks to Paul Howarth
  <paul@city-fan.org> for the bug report in another module.
  https://rt.cpan.org/Ticket/Display.html?id=103482
- Clarify licensing terms
- Move verbose testing to a private module, and implement it in a way that
  doesn't require editing the Makefile after it is generated.
- Require File::Slurp instead of including it, to avoid potential problems
  like this:
  http://www.cpantesters.org/cpan/report/86a0145a-e52b-11e4-a1d1-8536eb4f9f07

Version 1.4204: Sun Apr 12 2015
- Enable verbose testing for CPAN-testers
- Consolidate issue tracking at rt.cpan.org
- Fix excessive warnings about signal handlers. Thanks to "festinare" for the
  patch. https://code.google.com/p/cgi-cache/issues/detail?id=1

Version 1.4203: Sat Apr 4 2015
- Make test script more compatible with automated testing
- Improve the speed test and make it separate from the normal functional
  tests. Thanks to Gregor Hermann <gregoa@cpan.org> for observing that the
  speed test was flaky.

Version 1.4202: Sun Mar 22 2015
- Moved code to github
- Added POD test

Version 1.4201 Tue Jul 15 2008:
- Updated to the latest version of Module::Install
- Removed auto-install for better compatibility with CPAN and others
- Cleaned up the contradictory licensing. (Now just GPL instead of GPL in one
	place, Perl artistic in another, "all rights reserved" in yet another.)
- Moved hosting to Google Code

Version 1.4200 Mon Mar 14 2005:
- Fixed a bug where the user-specified max cache size was not being honored,