@@ -7,3 +7,4 @@ inc/
 /pm_to_blib
 /CGI-Cache-*.tar.gz
 **/*.swp
+t/000_standard__*
