@@ -16,7 +16,6 @@ t/disabled_ouput.t
 t/invalidate_cache_entry.t
 t/non-caching.t
 t/pause_continue.t
-t/pod.t
 t/stop.t
 t/Test/Utils.pm
 t/speed.pl
@@ -36,6 +35,7 @@ inc/Module/Install/GithubMeta.pm
 inc/Module/Install/Include.pm
 inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
+inc/Module/Install/StandardTests.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 inc/Module/Install/PRIVATE/Add_Test_Target.pm
