@@ -22,6 +22,9 @@
 ^\.#
 \..*\.swp$
 
+# These are auto-generated
+t/000_standard__
+
 # Other stuff
 ^todo$
 ^DEVELOPERNOTES$
