@@ -1,5 +1,6 @@
 Version 1.4207: 
 - Fix bug introduced in user_specified_filehandle.t by last release
+- Add standard tests
 
 Version 1.4206: Sat May 2 2015
 - Prevent CPAN from indexing private-lib
